--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "googleapis": "^156.0.0",
     "lucide-react": "^0.539.0",
     "next": "15.4.6",
     "postcss": "^8.5.6",
